Grammar.txt
1. Literal
    literal: INTEGER
           | DOUBLE
           | STRING
           | BOOLEAN

2. Primary
    primary: varExpression
           | literal
           | arrIndex

3. Keyword
keyword: DEF
       | WHILE
       | FOR
       | IF
       | ELIF
       | NEW
       | AND
       | OR
       | RETURN
       | PRINT
       | VAR

4.
binaryOperator: PLUS
        | MINUS
        | comparator
        | MULT
        | MULTMULT

5.
unaryOperator: PLUSPLUS
             | MINUSMINUS

6.
comparator: GREATER
          | LESS
          | GREATEQUAL
          | LESSEQUAL

7.
primary: literal
       | varExpression

8.
expression: primary
          | primary operator primary
          | primary unaryOperator
          | RETURN primary

9. statement
    statement: expression SEMI
             | RETURN primary SEMI


10.
conditional: VAR
           | primary comparator primary
           | NOT OPAREN primary comparator primary CPAREN

11.
ifExpression: IF OPAREN conditional CPAREN body

12.
ifChain: ifExpression
       | if Expression elifChain

13.
elifChain: elseExpression
         | elifExpression
         | elifExpression elifChain

14.
statement: functionDef
         | expression SEMI
         | vardef
         | arrayDeclaration


15. variable
    variable: functionCall
            | lambda
            | literal
            | expression

16. functionCall
    functionCall: varName OPAREN paramList CPAREN

17. paramList
    paramList: null
             | primary
             | primary paramList

18.
vardef: VARDEF VAR EQUAL variable

19.
comment: /= expression =/

20.
whileLoop: WHILE OPAREN conditional CPAREN body

21.
for: FOR OPAREN vardef COMMA conditional COMMA expression CPAREN body

22.
expressionList: expression
              | expression optExpressionList

23.
body: OBRACKET expressionList CBRACKET

24.
functionDef: DEF VAR OPAREN paramDecList CPAREN body

25. lambda
    lambda: LAMBDA paramList body

26. variable definition
    varDefinition: VARDEF VAR EQUAL expression SEMI

27. lambda call
    lambdaCall: LAMBDA OPAREN paramList CPAREN

28. varExpression
    varExpression: VAR
                 | VAR OPAREN paramList CPAREN
                 | VAR EQUAL primary
                 | VAR OSQUARE INTEGER CSQUARE

29. paramDecList
    paramDecList: null
                | paramDec
                | paramDecList

30. paramDec
    paramDec: VARDEF VAR

31. statementList
    statementList: null
                 | statement
                 | statementList

32. elifExpression
    elifExpression: ELIF OPAREN conditionalList CPAREN

33. elseExpression
    elseExpression: ELSE body

34. printCall
    printCall: PRINT OPAREN primary OPAREN

35. conditionalList
    conditionalList: conditional
                   | conditional AND conditionalList
                   | conditional OR conditionalList

36. arrayDeclaration
    arrayDeclaration: ARR OSQUARE CSQUARE VAR EQUAL OSQUARE INTEGER CSQUARE
                    : ARR OSQUARE CSQUARE VAR EQUAL OSQUARE primaryList CSQUARE

37. arrIndex
    arrIndex: VAR OSQUARE INTEGER CSQUARE

38. arrIndexAssignment
    arrIndexAssignment: VAR OBRACKET expresion CBRACKET EQUAL

39. primaryList
    primaryList: primary
               | primary COMMA primaryList

40. array expression
    arrayExpression: arrayIndex
                   | arrayIndexAssignment

41. arrayIndexAssignment
    arrayIndexAssignment: VAR OBRACKET primary CBRACKET EQUAL primary
